--- a/presalesite/migration/templates/migration/migration_list.html
+++ b/presalesite/migration/templates/migration/migration_list.html
@@ -12,52 +12,52 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Миграция
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Миграция" name="Миграция" placeholder="кол-во дней" style="width: 120px;" required />
+      <input type="number" step="0.1" id="Миграция" name="Миграция" placeholder="кол-во дней" style="width: 120px;" required value="{{ migrations.0.days }}"/>
       </summary>
       <ul>
         <li>
           <details style="background-color: rgb(172, 165, 165);">
 
             <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция пользовательских сегментов" value="Миграция пользовательских сегментов">
+              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция пользовательских сегментов" value="Миграция пользовательских сегментов" {% if 'Миграция пользовательских сегментов' in names %} checked {% endif %}>
               Миграция пользовательских сегментов
               </summary> 
           <ul>
             <li>
               <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (пользовательский сегмент)" value="Разработка плана миграции (пользовательский сегмент)">
+                <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (пользовательский сегмент)" value="Разработка плана миграции (пользовательский сегмент)" {% if 'Разработка плана миграции (пользовательский сегмент)' in names %} checked {% endif %}>
                 Разработка плана миграции
               </summary>
 
               <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации мигрируемых сегментов и систем (пользовательский сегмент)" value="Анализ и подготовка конфигурации мигрируемых сегментов и систем (пользовательский сегмент)">
+                <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации мигрируемых сегментов и систем (пользовательский сегмент)" value="Анализ и подготовка конфигурации мигрируемых сегментов и систем (пользовательский сегмент)" {% if 'Анализ и подготовка конфигурации мигрируемых сегментов и систем (пользовательский сегмент)' in names %} checked {% endif %}>
                 Анализ и подготовка конфигурации мигрируемых сегментов и систем
               </summary>
           </li>
             <li>
               <details style="background-color: rgb(172, 165, 165);">
                 <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция пользователей ЛВС включающая в себя:" value="Миграция пользователей ЛВС включающая в себя:">
+                  <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция пользователей ЛВС включающая в себя:" value="Миграция пользователей ЛВС включающая в себя:" {% if 'Миграция пользователей ЛВС включающая в себя:' in names %} checked {% endif %}>
                   Миграция пользователей ЛВС включающая в себя:
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (пользовательский сегмент)" value="Подготовительные работы (пользовательский сегмент)">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (пользовательский сегмент)" value="Подготовительные работы (пользовательский сегмент)" {% if 'Подготовительные работы (пользовательский сегмент)' in names %} checked {% endif %}>
                   Подготовительные работы
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (пользовательский сегмент)" value="Физическая миграция (пользовательский сегмент)">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (пользовательский сегмент)" value="Физическая миграция (пользовательский сегмент)" {% if 'Физическая миграция (пользовательский сегмент)' in names %} checked {% endif %}>
                   Физическая миграция
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (пользовательский сегмент)" value="Логическая миграция (пользовательский сегмент)">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (пользовательский сегмент)" value="Логическая миграция (пользовательский сегмент)" {% if 'Логическая миграция (пользовательский сегмент)' in names %} checked {% endif %}>
                   Логическая миграция
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (пользовательский сегмент)" value="Отладка работы систем/сети (пользовательский сегмент)">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (пользовательский сегмент)" value="Отладка работы систем/сети (пользовательский сегмент)" {% if 'Отладка работы систем/сети (пользовательский сегмент)' in names %} checked {% endif %}>
                   Отладка работы систем/сети
                 </summary>
               </li>   
@@ -69,50 +69,50 @@
         <details style="background-color: rgb(172, 165, 165);">
 
           <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-            <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция серверных сегментов" value="Миграция серверных сегментов">
+            <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция серверных сегментов" value="Миграция серверных сегментов" {% if 'Миграция серверных сегментов' in names %} checked {% endif %}>
             Миграция серверных сегментов
             </summary> 
         <ul>
           <li>
             <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (серверный сегмент)" value="Разработка плана миграции (серверный сегмент)">
+              <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (серверный сегмент)" value="Разработка плана миграции (серверный сегмент)" {% if 'Разработка плана миграции (серверный сегмент)' in names %} checked {% endif %}>
               Разработка плана миграции
             </summary>
 
             <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации мигрируемых сегментов и систем (серверный сегмент)" value="Анализ и подготовка конфигурации мигрируемых сегментов и систем (серверный сегмент)">
+              <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации мигрируемых сегментов и систем (серверный сегмент)" value="Анализ и подготовка конфигурации мигрируемых сегментов и систем (серверный сегмент)" {% if 'Анализ и подготовка конфигурации мигрируемых сегментов и систем (серверный сегмент)' in names %} checked {% endif %}>
               Анализ и подготовка конфигурации мигрируемых сегментов и систем
             </summary>
         </li>
           <li>
             <details style="background-color: rgb(172, 165, 165);">
               <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция серверных сегментов включающая в себя:" value="Миграция серверных сегментов включающая в себя:">
+                <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция серверных сегментов включающая в себя:" value="Миграция серверных сегментов включающая в себя:" {% if 'Миграция серверных сегментов включающая в себя:' in names %} checked {% endif %}>
                 Миграция серверных сегментов включающая в себя:
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (серверный сегмент)" value="Подготовительные работы (серверный сегмент)">
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (серверный сегмент)" value="Подготовительные работы (серверный сегмент)" {% if 'Подготовительные работы (серверный сегмент)' in names %} checked {% endif %}>
                 Подготовительные работы
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (серверный сегмент)" value="Физическая миграция (серверный сегмент)">
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (серверный сегмент)" value="Физическая миграция (серверный сегмент)" {% if 'Физическая миграция (серверный сегмент)' in names %} checked {% endif %}>
                 Физическая миграция
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (маршрутизация) (серверный сегмент)" value="Логическая миграция (маршрутизация) (серверный сегмент)">
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (маршрутизация) (серверный сегмент)" value="Логическая миграция (маршрутизация) (серверный сегмент)" {% if 'Логическая миграция (маршрутизация) (серверный сегмент)' in names %} checked {% endif %}>
                 Логическая миграция (маршрутизация)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (политика безопасности) (серверный сегмент)" value="Логическая миграция (политика безопасности) (серверный сегмент)">
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (политика безопасности) (серверный сегмент)" value="Логическая миграция (политика безопасности) (серверный сегмент)" {% if 'Логическая миграция (политика безопасности) (серверный сегмент)' in names %} checked {% endif %}>
                 Логическая миграция (политика безопасности)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (серверный сегмент)" value="Отладка работы систем/сети (серверный сегмент)">
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (серверный сегмент)" value="Отладка работы систем/сети (серверный сегмент)" {% if 'Отладка работы систем/сети (серверный сегмент)' in names %} checked {% endif %}>
                 Отладка работы систем/сети
               </summary>
             </li>   
@@ -126,50 +126,50 @@
       <details style="background-color: rgb(172, 165, 165);">
 
         <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-          <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция межсетевого экрана" value="Миграция межсетевого экрана">
+          <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Миграция межсетевого экрана" value="Миграция межсетевого экрана" {% if 'Миграция межсетевого экрана' in names %} checked {% endif %}>
           Миграция межсетевого экрана
           </summary> 
       <ul>
         <li>
           <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-            <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (МСЭ сегмент)" value="Разработка плана миграции (МСЭ сегмент)">
+            <input type="checkbox" style="margin-left:20px;" class="list-item-checkbox" name="Разработка плана миграции (МСЭ сегмент)" value="Разработка плана миграции (МСЭ сегмент)" {% if 'Разработка плана миграции (МСЭ сегмент)' in names %} checked {% endif %}>
             Разработка плана миграции
           </summary>
 
           <summary style="margin-left:83px; font-weight:normal; cursor: pointer;">
-            <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации межсетевого экрана" value="Анализ и подготовка конфигурации межсетевого экрана">
+            <input type="checkbox" style="margin-left:20px; margin-top:5px;" class="list-item-checkbox" name="Анализ и подготовка конфигурации межсетевого экрана" value="Анализ и подготовка конфигурации межсетевого экрана" {% if 'Анализ и подготовка конфигурации межсетевого экрана' in names %} checked {% endif %}>
             Анализ и подготовка конфигурации межсетевого экрана
           </summary>
       </li>
         <li>
           <details style="background-color: rgb(172, 165, 165);">
             <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция межсетевого экрана включающая в себя:" value="Миграция межсетевого экрана включающая в себя:">
+              <input type="checkbox" style="margin-left:20px;" style="margin-right:10px;" class="list-item-checkbox" name="Миграция межсетевого экрана включающая в себя:" value="Миграция межсетевого экрана включающая в себя:" {% if 'Миграция межсетевого экрана включающая в себя:' in names %} checked {% endif %}>
               Миграция межсетевого экрана включающая в себя:
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (МСЭ сегмент)" value="Подготовительные работы (МСЭ сегмент)">
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Подготовительные работы (МСЭ сегмент)" value="Подготовительные работы (МСЭ сегмент)" {% if 'Подготовительные работы (МСЭ сегмент)' in names %} checked {% endif %}>
               Подготовительные работы
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (МСЭ сегмент)" value="Физическая миграция (МСЭ сегмент)">
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Физическая миграция (МСЭ сегмент)" value="Физическая миграция (МСЭ сегмент)" {% if 'Физическая миграция (МСЭ сегмент)' in names %} checked {% endif %}>
               Физическая миграция
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (маршрутизация) (МСЭ сегмент)" value="Логическая миграция (маршрутизация) (МСЭ сегмент)">
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (маршрутизация) (МСЭ сегмент)" value="Логическая миграция (маршрутизация) (МСЭ сегмент)" {% if 'Логическая миграция (маршрутизация) (МСЭ сегмент)' in names %} checked {% endif %}>
               Логическая миграция (маршрутизация)
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (политика безопасности) (МСЭ сегмент)" value="Логическая миграция (политика безопасности) (МСЭ сегмент)">
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Логическая миграция (политика безопасности) (МСЭ сегмент)" value="Логическая миграция (политика безопасности) (МСЭ сегмент)" {% if 'Логическая миграция (политика безопасности) (МСЭ сегмент)' in names %} checked {% endif %}> 
               Логическая миграция (политика безопасности)
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (МСЭ сегмент)" value="Отладка работы систем/сети (МСЭ сегмент)">
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Отладка работы систем/сети (МСЭ сегмент)" value="Отладка работы систем/сети (МСЭ сегмент)" {% if 'Отладка работы систем/сети (МСЭ сегмент)' in names %} checked {% endif %}>
               Отладка работы систем/сети
             </summary>
           </li>   
