--- a/presalesite/rates/templates/rates/rates_list.html
+++ b/presalesite/rates/templates/rates/rates_list.html
@@ -12,13 +12,13 @@
             <ul>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Инженер" value="Инженер">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Инженер" value="Инженер" {% if person.0.person == "Инженер" %} checked {% endif %}>
                     Инженер
                   </summary>
                 </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Архитектор" value="Архитектор">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Архитектор" value="Архитектор" {% if person.0.person == "Архитектор" %} checked {% endif %}>
                     Архитектор
                   </summary>
               </li>
@@ -33,7 +33,7 @@
           <li>
               <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
                 Инженер    
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Инженер" name="Инженер" value="20400.00"/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Инженер" name="Инженер" value="{% if engineer_cost.0.engineer_cost %}{{ engineer_cost.0.engineer_cost }}{% else %}20400.00{% endif %}"/> 
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
             </li>
@@ -41,21 +41,21 @@
           <li>
             <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
                 Архитектор
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Архитектор" name="Архитектор" value="25400.00"/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Архитектор" name="Архитектор" value="{% if architect_cost.0.architect_cost %}{{ architect_cost.0.architect_cost }}{% else %}25400.00{% endif %}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
           <li>
             <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
                 Менеджер проекта
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Менеджер проекта" name="Менеджер проекта" value="20400.00"/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Менеджер проекта" name="Менеджер проекта" value="{% if manager_cost.0.manager_cost %}{{ manager_cost.0.manager_cost }}{% else %}20400.00{% endif %}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
           <li>
             <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
                 Разработчик технической документации
-                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Разработчик технической документации" name="Разработчик технической документации" value="16400.00"/>
+                <input style="width: 100px; text-align: right;" type="number" step="0.1" id="Разработчик технической документации" name="Разработчик технической документации" value="{% if tech_writer_cost.0.tech_writer_cost %}{{ tech_writer_cost.0.tech_writer_cost }}{% else %}16400.00{% endif %}"/>
                 <label for="float-input" style="margin-left:1px;">руб.</label>
               </summary>
           </li>
@@ -70,14 +70,14 @@
       <li>
         <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
             Менеджер проекта
-            <input style="width: 60px; text-align: right;" type="number" step="0.1" id="Менеджер проекта коэффициент" name="Менеджер проекта коэффициент" value="0.3"/>
+            <input style="width: 60px; text-align: right;" type="number" step="0.1" id="Менеджер проекта коэффициент" name="Менеджер проекта коэффициент" value="{% if manager_coef.0.manager_coef %}{{ manager_coef.0.manager_coef }}{% else %}0.3{% endif %}"/>
             <label for="float-input" style="margin-left:1px;"></label>
           </summary>
       </li>
       <li>
         <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
             Разработчик технической документации
-            <input style="width: 60px; text-align: right;" type="number" step="0.1" id="Разработчик технической документации коэффициент" name="Разработчик технической документации коэффициент" value="0.3"/>
+            <input style="width: 60px; text-align: right;" type="number" step="0.1" id="Разработчик технической документации коэффициент" name="Разработчик технической документации коэффициент" value="{% if tech_writer_coef.0.tech_writer_coef %}{{ tech_writer_coef.0.tech_writer_coef }}{% else %}0.3{% endif %}"/>
             <label for="float-input" style="margin-left:1px;"></label>
           </summary>
       </li>
